alpm-db/tests/correct/desc/v2/full.desc
%NAME%
foo

%VERSION%
1.0.0-1

%BASE%
foo

%DESC%
An example package

%URL%
https://example.org/

%ARCH%
x86_64

%BUILDDATE%
1733737242

%INSTALLDATE%
1733737243

%PACKAGER%
Foobar McFooface <foobar@mcfooface.org>

%SIZE%
123

%GROUPS%
utils
cli

%REASON%
1

%LICENSE%
MIT
Apache-2.0

%VALIDATION%
sha256
pgp

%REPLACES%
pkg-old

%DEPENDS%
glibc
libwlroots-0.19.so=libwlroots-0.19.so-64
lib:libexample.so.1

%OPTDEPENDS%
optpkg

%CONFLICTS%
foo-old

%PROVIDES%
foo-virtual
libwlroots-0.19.so=libwlroots-0.19.so-64
lib:libexample.so.1

%XDATA%
pkgtype=pkg

